<resources>
    <string name="app_name">Build Your Own PC</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="motherboard">MotherBoard</string>
    <string name="memory">Memory</string>
    <string name="cpu">CPU</string>
    <string name="ssd">SSD</string>
    <string name="case_psu">CASE+PSU</string>
    <string name="gpu">GPU</string>
    <string name="build_your_own">Build Your Own</string>
    <string name="title_activity_cpu">cpu</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_motherboard">motherboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">add</string>
    <string name="buildyourownpc">BuildYourOwnPC</string>
    <string name="intel_core_i7_8700k_3_7ghz_12mb_cache_s1151v2_box">מעבד אינטל Intel Core i7 8700K 3.7Ghz 12MB Cache s1151v2 - Box</string>
    <string name="todo">TODO</string>
    <string name="title_activity_register_page">RegisterPage</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="password_butt">password</string>
    <string name="username_register">Username</string>
    <string name="motherboard1">motherboard1</string>
    <string name="motherboard2">motherboard2</string>
    <string name="motherboard3">motherboard3</string>
    <string name="motherboard4">motherboard4</string>
    <string name="title_activity_memory">memory</string>
    <string name="cpu4">cpu4</string>
    <string name="cpu1">cpu1</string>
    <string name="hyperx">TODO</string>
    <string name="fury_hyperx_ddr4_8gb">Fury HyperX DDR4 8gb</string>
    <string name="motherboardpng">TODO</string>
    <string name="gigabyte_z97x_gaming_5">GIGABYTE Z97X-Gaming 5</string>
    <string name="title_activity_ssd">ssd</string>
    <string name="samsung_ssd_evo_970_1tb">Samsung SSD EVO 970 1TB</string>
    <string name="ssd970">TODO</string>
    <string name="title_activity_case">Case</string>
    <string name="password1">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_gpu">gpu</string>
    <string name="_399">399 ₪</string>
    <string name="_370">370 ₪</string>
    <string name="_200">200 ₪</string>
    <string name="_299">299 ₪</string>
    <string name="_1800">1800 ₪</string>
    <string name="_930">930 ₪</string>
    <string name="_670">670 ₪</string>
    <string name="_1120">1120 ₪</string>
    <string name="amd_ryzen_7_1800x_8_cores_3_6_ghz">AMD Ryzen 7 1800X, 8 cores, 3.6 Ghz</string>
    <string name="_360">360 ₪</string>
    <string name="g_skill_ddr4_32gb_memory_kit_4400mhz">G.SKILL DDR4 32GB Memory Kit 4400MHz</string>
    <string name="_2320">2320 ₪</string>
    <string name="g_skill_announces_32gb_ddr4_4266mhz_trident_z_rgb_memory_kits">G.Skill Announces 32GB DDR4-4266MHz Trident Z RGB Memory Kits</string>
    <string name="_2110">2110 ₪</string>
    <string name="_8gb_2133mhz_kingston_kvr21n15s8_8">8GB 2133Mhz Kingston KVR21N15S8/8</string>
    <string name="_435">435 ₪</string>
    <string name="_750_">750 ₪</string>
    <string name="paytext_gpu">paytext_gpu</string>
    <string name="paytext_cpu">paytext_cpu</string>
    <string name="paytext_motherboard">paytext_motherboard</string>
    <string name="paytext_memory">paytext_memory</string>
    <string name="paytext_ssd">paytext_ssd</string>
    <string name="paytext_case">paytext_case</string>
    <string name="pay">pay</string>
    <string name="cougar_mx350_tg">Cougar mx350 tg</string>
    <string name="game_max_eclipse_rgb_tempered_glass_midi_pc_gaming_case">Game Max Eclipse RGB Tempered Glass Midi PC Gaming Case</string>
    <string name="cougar_mx310">Cougar MX310</string>
    <string name="intel_b360_aorus_motherboard_with_rgb_fusion_with_digital_leds">Intel B360 AORUS motherboard with RGB Fusion with Digital LEDs</string>
    <string name="_610">610 ₪</string>
    <string name="intel_h370_ultra_durable_motherboard_with_usb_3_1_gen2_type_a_usb3_1_gen1_type_c"><![CDATA[Intel H370 Ultra Durable motherboard with USB 3.1 Gen2 Type-A & USB3.1 Gen1 Type-C]]></string>
    <string name="_430">430 ₪</string>
    <string name="gigabyte_unveils_new_990fx_and_970_gaming_motherboards_amd_fx">GIGABYTE Unveils New 990FX and 970-Gaming Motherboards, AMD FX</string>
    <string name="_330">330 ₪</string>
    <string name="_750">750 ₪</string>
    <string name="sandisk_ssd_plus_sdssda240g_240gb">SanDisk SSD PLUS SDSSDA240G 240GB</string>
    <string name="_220">220 ₪</string>
    <string name="kingston_ssdnow_v100_128gb_ssd">Kingston SSDNow V100 128GB SSD</string>
    <string name="_110">110 ₪</string>
    <string name="corsair_force_le200_120gb_ssd_sata_iii_2_5_550_500_mb_s">Corsair Force LE200 120GB SSD Sata III 2.5\'\' 550/500 Mb/s</string>
    <string name="_100">100 ₪</string>
    <string name="amd_ryzen_7_1800x_8_cores_3_6_gh">AMD Ryzen 7 1800X, 8 cores, 3.6 Ghz</string>
    <string name="_1120_">1120 ₪</string>
    <string name="intel_core_i3_8100_8th_genatration">INTEL CORE I3 8100 - 8TH Genatration</string>
    <string name="gigabyte_gtx_950_2gb">Gigabyte gtx 950 2gb</string>
    <string name="_450">450 ₪</string>
    <string name="cougar_mx310_">Cougar, MX310</string>
    <string name="password">Password</string>
</resources>