<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">


    <RelativeLayout
        android:layout_width="442dp"
        android:layout_height="751dp">

        <EditText
            android:id="@+id/username_Input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/username_register"
            android:inputType="textPersonName"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/password_Input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="114dp"
            android:layout_marginTop="115dp"
            android:layout_marginEnd="114dp"
            android:layout_marginRight="114dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textVisiblePassword" />

        <EditText
            android:id="@+id/email_Input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="113dp"
            android:layout_marginTop="184dp"
            android:layout_marginEnd="115dp"
            android:layout_marginRight="115dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="180dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="283dp"
            android:layout_marginEnd="174dp"
            android:layout_marginRight="174dp"
            android:text="@string/submit" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>