<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".memory4">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".cpu3">

        <!-- TODO: Update blank fragment layout -->

        <Button
            android:id="@+id/addCpuButton"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="285dp"
            android:layout_height="66dp"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="44dp"
            android:layout_marginRight="44dp"
            android:text="@string/_8gb_2133mhz_kingston_kvr21n15s8_8"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="386dp"
            android:layout_height="204dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ram4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="236dp" />

        <TextView
            android:id="@+id/price12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="173dp"
            android:layout_marginLeft="173dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="173dp"
            android:layout_marginRight="173dp"
            android:text="@string/_435"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>